# BonsaiApp

./: .gitignore  CHANGELOG_v0.2.md  CHANGELOG_v0.3.md  CHANGELOG_v0.4.md  CHANGELOG_v0.5.md  CHANGELOG_v0.6.md  CHANGELOG_v0.7.md  CHANGELOG_v0.8.md  CHANGELOG_v0.9.md  CHANGELOG_v1.0.md  CHANGELOG_v1.1.md  CHANGELOG_v1.2.md  HANDOFF.md  SETUP_GMAIL.md  SETUP_ONEDRIVE.md  SETUP_RCLONE.md  build.gradle  debug.keystore  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/appathy/bonsai/: BootReceiver.kt  Engine.kt  LlamaBridge.kt  LlamaServer.kt  MailActivity.kt  MainActivity.kt  RagActivity.kt  ServerService.kt
app/src/main/java/com/appathy/bonsai/mail/: ImapClient.kt  MailQueue.kt  MailWatcher.kt  MimeParser.kt  Pipeline.kt
app/src/main/java/com/appathy/bonsai/rag/: FolderSync.kt  OneDrive.kt  RagDb.kt  Tokenizer.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
